Fix spacing

--- a/_sass/info_page.scss
+++ b/_sass/info_page.scss
@@ -10,8 +10,12 @@
     @include large-spacing();
   }
 
-  > * {
+  > h2 {
     width: 80%;
+  }
+
+  > p {
+    width: 75%;
   }
 
   .block-image {
